test-package-compiler/tests/snapshots/compiler_tests__ws_stdlib_list_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 126,
                            end: 133,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 126,
                            end: 133,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test List (linked list) operations",
                        span: Span {
                            start: 126,
                            end: 133,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "List creation",
                        span: Span {
                            start: 126,
                            end: 133,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "numbers",
                        span: Span {
                            start: 126,
                            end: 133,
                        },
                    },
                ),
                value: Block(
                    Block {
                        parameters: [],
                        body: [
                            ExpressionStatement {
                                comments: CommentAttachment {
                                    leading: [],
                                    trailing: None,
                                    leading_blank_line: false,
                                    blank_line_after_comments: false,
                                },
                                expression: Literal(
                                    Integer(
                                        1,
                                    ),
                                    Span {
                                        start: 138,
                                        end: 139,
                                    },
                                ),
                                preceding_blank_line: false,
                            },
                        ],
                        span: Span {
                            start: 137,
                            end: 138,
                        },
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 126,
                    end: 138,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ,",
                span: Span {
                    start: 139,
                    end: 140,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 151,
                    end: 152,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 163,
                    end: 164,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 412,
                    end: 413,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 472,
                    end: 473,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 528,
                    end: 529,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 593,
                    end: 594,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: MessageSend {
                receiver: Error {
                    message: "Unexpected token: expected expression, found ]",
                    span: Span {
                        start: 682,
                        end: 683,
                    },
                },
                selector: Binary(
                    "++",
                ),
                arguments: [
                    Block(
                        Block {
                            parameters: [],
                            body: [
                                ExpressionStatement {
                                    comments: CommentAttachment {
                                        leading: [],
                                        trailing: None,
                                        leading_blank_line: false,
                                        blank_line_after_comments: false,
                                    },
                                    expression: Literal(
                                        Integer(
                                            3,
                                        ),
                                        Span {
                                            start: 688,
                                            end: 689,
                                        },
                                    ),
                                    preceding_blank_line: false,
                                },
                            ],
                            span: Span {
                                start: 687,
                                end: 688,
                            },
                        },
                    ),
                ],
                is_cast: false,
                span: Span {
                    start: 682,
                    end: 688,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ,",
                span: Span {
                    start: 689,
                    end: 690,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 692,
                    end: 693,
                },
            },
            preceding_blank_line: false,
        },
    ],
    span: Span {
        start: 126,
        end: 838,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}

Diagnostics:
Diagnostic { severity: Error, message: "Expected ']' to close block", span: Span { start: 139, end: 140 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ,", span: Span { start: 139, end: 140 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 151, end: 152 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 163, end: 164 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 412, end: 413 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 472, end: 473 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 528, end: 529 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 593, end: 594 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 682, end: 683 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Expected ']' to close block", span: Span { start: 689, end: 690 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ,", span: Span { start: 689, end: 690 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 692, end: 693 }, hint: None, category: None, notes: [], provision: None }
