test-package-compiler/tests/snapshots/compiler_tests__ws_stdlib_set_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 138,
                            end: 144,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 138,
                            end: 144,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test Set (unique elements) operations",
                        span: Span {
                            start: 138,
                            end: 144,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Set creation from list",
                        span: Span {
                            start: 138,
                            end: 144,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "colors",
                        span: Span {
                            start: 138,
                            end: 144,
                        },
                    },
                ),
                value: MessageSend {
                    receiver: ClassReference {
                        name: Identifier {
                            name: "Set",
                            span: Span {
                                start: 148,
                                end: 151,
                            },
                        },
                        package: None,
                        span: Span {
                            start: 148,
                            end: 151,
                        },
                    },
                    selector: Keyword(
                        [
                            KeywordPart {
                                keyword: "fromList:",
                                span: Span {
                                    start: 152,
                                    end: 161,
                                },
                            },
                        ],
                    ),
                    arguments: [
                        Block(
                            Block {
                                parameters: [],
                                body: [
                                    ExpressionStatement {
                                        comments: CommentAttachment {
                                            leading: [],
                                            trailing: None,
                                            leading_blank_line: false,
                                            blank_line_after_comments: false,
                                        },
                                        expression: Literal(
                                            Symbol(
                                                "red",
                                            ),
                                            Span {
                                                start: 163,
                                                end: 167,
                                            },
                                        ),
                                        preceding_blank_line: false,
                                    },
                                ],
                                span: Span {
                                    start: 162,
                                    end: 163,
                                },
                            },
                        ),
                    ],
                    is_cast: false,
                    span: Span {
                        start: 148,
                        end: 163,
                    },
                },
                type_annotation: None,
                span: Span {
                    start: 138,
                    end: 163,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ,",
                span: Span {
                    start: 167,
                    end: 168,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 182,
                    end: 183,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 229,
                    end: 230,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 649,
                    end: 650,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 708,
                    end: 709,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found ]",
                span: Span {
                    start: 765,
                    end: 766,
                },
            },
            preceding_blank_line: false,
        },
    ],
    span: Span {
        start: 138,
        end: 918,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}

Diagnostics:
Diagnostic { severity: Error, message: "Expected ']' to close block", span: Span { start: 167, end: 168 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ,", span: Span { start: 167, end: 168 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 182, end: 183 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 229, end: 230 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 649, end: 650 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 708, end: 709 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 765, end: 766 }, hint: None, category: None, notes: [], provision: None }
